Fixing Natalia post, photo preview image height on mobile

--- a/static/css/tobyblog.css
+++ b/static/css/tobyblog.css
@@ -98,6 +98,7 @@ article img, div#mygallery {
 
 article.photo img {
   margin-top: -25%;
+  margin-left: 0;
 }
 article.photo img[alt="A little dog having fun in the park"] {
   margin-top: -25%;
@@ -169,11 +170,54 @@ and (max-width: 780px) {
     max-width: 100vw;
   }
   
+  article.photo {
+    margin-top: 0;
+  }
+  
+  article.photo img {
+    margin-top: 0;  
+  }
+
   .micropost img {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
     max-width: 100%;
   }
+  
+	article.photo img[alt="A little dog having fun in the park"] {
+	  margin-top: 0;
+	}
+	article.photo img[alt="ducks at Bolin Park"] {
+	  margin-top: 0;
+	}
+	article.photo img[alt="climbing a hill at Devil's Den"] {
+	  margin-top: 0;
+	}
+	article.photo img[alt="onthebridge"] {
+	  margin-top: 0;
+	}
+	article.photo img[alt="Lovebirds"] {
+	  margin-top: 0;
+	}
+	article.photo img[alt="Futuristic Billboard Wall"] {
+	  margin-top: 0;
+	}
+	article.photo img[alt="Backlit Flower"] {
+	  margin-top: 0;
+	}
+	article.photo img[alt="Old Woman"] {
+	  margin-top: 0;
+	}
+	article.photo img[alt="@Kassiblog"] {
+	  margin-top: 0;
+	}
+	article.photo img[alt="DowntownFever"] {
+	  margin-top: 0;
+	}
+	article.photo img[alt="Oracle Headquarters"] {
+	  margin-top: 0;
+	}
+  
 
 }
